--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,31 @@
 Package: npcausal
-Type: Package
 Title: Nonparametric causal inference methods
-Version: 0.1.0
-Author: Edward H. Kennedy
+Version: 0.1.1
+Authors@R: c(
+    person("Edward", "Kennedy", email = "edward@stat.cmu.edu",
+           role = c("aut", "cre", "cph")),
+    person("Nima", "Hejazi", email = "nhejazi@berkeley.edu",
+           role = "ctb",
+           comment = c(ORCID = "0000-0002-7127-2789"))
+  )
 Maintainer: Edward H. Kennedy <edward@stat.cmu.edu>
-Description: This package provides a variety of tools for nonparametric estimation of causal effects across a wide range of settings. The methods are based on the theory of influence functions, and can incorporate flexible machine learning and high-dimensional regression tools, while still yielding inference in the form of confidence intervals and hypothesis tests. Many of the methods are doubly robust.
+Description: This package provides a variety of tools for the nonparametric
+    estimation of causal effects across a wide range of settings. The methods
+    are based on the theory of influence functions, and can incorporate flexible
+    machine learning and high-dimensional regression tools, while still yielding
+    inference in the form of confidence intervals and hypothesis tests. Many of
+    the methods are doubly robust.
+Depends: R (>= 3.2.0)
+Imports:
+    stats,
+    ranger
+Suggests:
+    testthat,
+    knitr,
+    rmarkdown,
 License: GPL
+URL: https://github.com/ehkennedy/npcausal
+BugReports: https://github.com/ehkennedy/npcausal/issues
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
